[package]
name = "rsacpi"
description = "A simple command-line tool with no dependencies to display battery, ac, and thermal information on Linux"
version = "0.4.3"
repository = "https://github.com/silverbaum/rsacpi"
license = "MIT"
keywords = ["battery", "cli"]
categories = ["command-line-utilities"]
edition = "2024"
[profile.release]
opt-level = "s"
